# ScratchBird

./: .gitattributes  .gitignore  KNOWN_LIMITATIONS.md  README.md  REFERENCE_SYSTEMS_AND_IP_BOUNDARY.md  RELEASE_TERMS.md  SBOM.json  SECURITY.md  THIRD_PARTY_NOTICES.md  public_contract_snapshot
project/ai/: CMakeLists.txt  README.md  pyproject.toml
project/ai/capability/: capability-matrix.schema.json  capability-matrix.v0.json
project/ai/docs/: README.md
project/ai/examples/: README.md  http-bridge.env.example
project/ai/scripts/: ai_component_runner.py  ai_workplan_gate.py
project/ai/src/: README.md
project/ai/tests/: README.md  test_approval_store.py  test_audit_bundle.py  test_cluster_routing.py  test_compatibility.py  test_compile_repair.py  test_environment_manifest.py  test_execution_mode.py  test_framework_adapters.py  test_http_adapters.py  test_http_bridge.py  test_http_resilience.py  test_http_service_integration.py  test_live_native_conformance.py  test_local_launchers.py  test_mcp_runtime_integration.py  test_mcp_server.py  test_operation_streams.py  test_operational_controls.py  test_operator_bundle.py  test_plan_introspection.py  test_policy.py  test_provider_profiles.py  test_remote_sessions.py  test_retrieval.py  test_router.py  test_service.py  test_settings.py  test_structured_logging.py  test_tool_schema.py  test_validate_evidence_gates.py  test_validate_release_candidate.py
project/ai/tools/: README.md  generate_ai_conformance_artifacts.py  run_live_native_conformance.py  run_local_bridge.sh  run_local_stack.sh  smoke_http_contract.py  validate_capability_matrix.py  validate_evidence_gates.py  validate_release_candidate.py
project/drivers/: CMakeLists.txt  DriverPackageManifest.csv  IMPORT_MANIFEST.md  README.md
project/drivers/adaptor/: README.md
project/drivers/driver/: COMPLETE_COVERAGE_TRACEABILITY.md  README.md
project/drivers/language/: sbsql_editor_tool_protocol.schema.json  sbsql_language_surface_manifest.json
project/drivers/scripts/: build_native_driver_tools.py  driver_component_runner.py  driver_execution_plan_gate.py  driver_ipar_metrics_gate.py  driver_p4_docs_donor_gate.py  driver_p4_docs_reference_gate.py  driver_p4_route_gate.py  driver_release_declaration_gate.py  driver_status_package_gate.py  finalize_driver_native_full_surface_matrix.py  generate_driver_contract_trace.py  generate_ipar_metrics_fixture.py  provision_driver_native_matrix_lanes.py  run_driver_complete_coverage_tests.py  run_driver_conformance.py  run_driver_efficiency_tests.py  run_driver_lane_tests.py  run_driver_language_tests.py  run_driver_native_full_surface_matrix.py  run_driver_native_tests.py  run_driver_script_diff.py
project/drivers/tool/: README.md
project/examples/public_engine_consumer_smoke/: CMakeLists.txt  main.c
project/libraries/sbl_numeric/: CMakeLists.txt  sbl_numeric.cpp  sbl_numeric.hpp
project/src/cluster_provider_stub/: CMakeLists.txt  stub_cluster_provider.cpp
project/src/ipc/: CMakeLists.txt  README.md  local_ipc_contract.cpp  local_ipc_contract.hpp  shared_memory_ipc_ring.cpp  shared_memory_ipc_ring.hpp
project/src/listener/: CMakeLists.txt  README.md  control_plane.cpp  control_plane.hpp  dbbt_lpreface.cpp  dbbt_lpreface.hpp  handoff_claim_reader.cpp  handoff_claim_reader.hpp  listener_config.cpp  listener_config.hpp  listener_diagnostics.cpp  listener_diagnostics.hpp  listener_metrics.cpp  listener_metrics.hpp  listener_runtime.cpp  listener_runtime.hpp  listener_socket_identity.cpp  listener_socket_identity.hpp  listener_support_bundle.cpp  listener_support_bundle.hpp  listener_tls_policy.cpp  listener_tls_policy.hpp  main.cpp  parser_pool.cpp  parser_pool.hpp  sbps_preauth.cpp  sbps_preauth.hpp
project/src/server/: CMakeLists.txt  README.md  agent_session_control_route_bridge.cpp  agent_session_control_route_bridge.hpp  boundary_guard.cpp  boundary_guard.hpp  cli.cpp  cli.hpp  compatibility_server_authority.cpp  compatibility_server_authority.hpp  config.cpp  config.hpp  config_policy_security_lifecycle.cpp  config_policy_security_lifecycle.hpp  database_ownership.cpp  database_ownership.hpp  diagnostics.cpp  diagnostics.hpp  donor_server_authority.cpp  donor_server_authority.hpp  engine_host.cpp  engine_host.hpp  event_notification_router.cpp  event_notification_router.hpp  ipar_protocol_support.cpp  ipar_protocol_support.hpp  ipar_security_policy_support.cpp  ipar_security_policy_support.hpp  ipc_server.cpp  ipc_server.hpp  ipc_tester.cpp  lifecycle.cpp  lifecycle.hpp  listener_orchestrator.cpp  listener_orchestrator.hpp  local_parser_shared_memory_transport.cpp  local_parser_shared_memory_transport.hpp  main.cpp  maintenance_coordinator.cpp  maintenance_coordinator.hpp  (+34 more)
project/src/server_engine_bridge/: CMakeLists.txt  README.md
project/src/wire/: CMakeLists.txt  README.md  direct_binary_result_frame.cpp  direct_binary_result_frame.hpp  result_batch_transfer.cpp  result_batch_transfer.hpp  streaming_cursor_manager.cpp  streaming_cursor_manager.hpp  streaming_result_window.cpp  streaming_result_window.hpp
project/tests/agents/: CMakeLists.txt  agent_action_actuator_authority_gate.cpp  agent_action_contract_matrix_gate.cpp  agent_action_dispatch_idempotency_gate.cpp  agent_action_dispatch_store_gate.cpp  agent_action_safety_rollout_gate.cpp  agent_approval_break_glass_workflow_gate.cpp  agent_arbitration_override_suppression_gate.cpp  agent_cluster_leadership_boundary_gate.cpp  agent_cluster_provider_boundary_gate.cpp  agent_cluster_provider_build_matrix_gate.cpp  agent_cluster_route_api_provider_gate.cpp  agent_commercial_evidence_gate.cpp  agent_dependency_lifecycle_dr_restore_clone_gate.cpp  agent_durable_runtime_catalog_gate.cpp  agent_enterprise_advisory_agents_gate.cpp  agent_enterprise_cleanup_archive_agents_gate.cpp  agent_enterprise_decision_store_gate.cpp  agent_enterprise_durable_catalog_store_gate.cpp  agent_enterprise_identity_session_job_route_gate.cpp  agent_enterprise_index_agents_gate.cpp  agent_enterprise_local_resource_agents_gate.cpp  agent_enterprise_memory_admission_alert_gate.cpp  (+64 more)
(+7881 files in other folders)
